# ShaderLove

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json_example  LICENSE  README.md
Assets/: love.hlsl
Source/: main.cpp
Source/Base/: DXSample.cpp  DXSample.h  DXSampleHelper.h  Win32Application.cpp  Win32Application.h  stdafx.h
Source/Core/: Graphics.cpp  Graphics.h
